Fix scrollbar again

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -91,7 +91,7 @@
             {
                 float: left;
                 color: $mediumGray;
-                height: 18px;
+                height: 20px;
 
                 .paid
                 {
